// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match > matchLocation > 0 matches 1`] = `undefined`;

exports[`match > matchLocation > from 1 route 1`] = `
{
  "first": [Circular],
  "full": true,
  "last": [Circular],
  "location": "/",
  "next": undefined,
  "params": {},
  "prev": undefined,
  "route": {
    "elements": {},
    "loaded": false,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
}
`;

exports[`match > matchLocation > from 1 route with "_root" 1`] = `
{
  "first": [Circular],
  "full": true,
  "last": [Circular],
  "location": "/",
  "next": undefined,
  "params": {},
  "prev": undefined,
  "route": {
    "elements": {
      "_root": {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "children": "Root",
        },
        "type": "div",
      },
    },
    "loaded": true,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
}
`;

exports[`match > matchLocation > from 1 route with params 1`] = `
{
  "first": [Circular],
  "full": true,
  "last": [Circular],
  "location": "/100",
  "next": undefined,
  "params": {
    "id": "100",
  },
  "prev": undefined,
  "route": {
    "elements": {},
    "loaded": false,
    "modules": [],
    "path": "/[:id]",
    "test": {
      "keys": [
        "id",
      ],
      "pattern": /\\^\\\\/\\(\\[\\^/\\]\\+\\?\\)\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
}
`;

exports[`match > matchLocation > from 2 routes 1`] = `
{
  "first": [Circular],
  "full": false,
  "last": {
    "first": [Circular],
    "full": true,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
  "location": "/",
  "next": {
    "first": [Circular],
    "full": true,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
  "params": {},
  "prev": undefined,
  "route": {
    "elements": {},
    "loaded": false,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
    "tree": [
      {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/abc",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
    ],
  },
}
`;

exports[`match > matchLocation > from 2 routes with "_root" 1`] = `
{
  "first": [Circular],
  "full": false,
  "last": {
    "first": [Circular],
    "full": true,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {
        "_root": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {
            "children": "Root",
          },
          "type": "div",
        },
      },
      "loaded": true,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
  "location": "/",
  "next": {
    "first": [Circular],
    "full": true,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {
        "_root": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {
            "children": "Root",
          },
          "type": "div",
        },
      },
      "loaded": true,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
  "params": {},
  "prev": undefined,
  "route": {
    "elements": {},
    "loaded": true,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
    "tree": [
      {
        "elements": {
          "_root": {
            "$$typeof": Symbol(react.transitional.element),
            "_owner": null,
            "_store": {},
            "key": null,
            "props": {
              "children": "Root",
            },
            "type": "div",
          },
        },
        "loaded": true,
        "modules": [],
        "path": "/abc",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
    ],
  },
}
`;

exports[`match > matchLocation > from 2 routes with params 1`] = `
{
  "first": [Circular],
  "full": false,
  "last": {
    "first": [Circular],
    "full": true,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
  "location": "/",
  "next": {
    "first": [Circular],
    "full": true,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
  "params": {},
  "prev": undefined,
  "route": {
    "elements": {},
    "loaded": false,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
    "tree": [
      {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/abc",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
      {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/[:id]",
        "test": {
          "keys": [
            "id",
          ],
          "pattern": /\\^\\\\/\\(\\[\\^/\\]\\+\\?\\)\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
    ],
  },
}
`;

exports[`match > matchLocation > from 3 routes with "_void" 1`] = `
{
  "first": [Circular],
  "full": false,
  "last": {
    "first": [Circular],
    "full": false,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {
        "_void": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {
            "children": "Void",
          },
          "type": "div",
        },
      },
      "loaded": true,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
      "tree": [
        {
          "elements": {},
          "loaded": true,
          "modules": [],
          "path": "/abc/xyz",
          "test": {
            "keys": [],
            "pattern": /\\^\\\\/abc\\\\/xyz\\(\\?=\\$\\|\\\\/\\)/i,
          },
        },
      ],
    },
  },
  "location": "/",
  "next": {
    "first": [Circular],
    "full": false,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {
        "_void": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {
            "children": "Void",
          },
          "type": "div",
        },
      },
      "loaded": true,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
      "tree": [
        {
          "elements": {},
          "loaded": true,
          "modules": [],
          "path": "/abc/xyz",
          "test": {
            "keys": [],
            "pattern": /\\^\\\\/abc\\\\/xyz\\(\\?=\\$\\|\\\\/\\)/i,
          },
        },
      ],
    },
  },
  "params": {},
  "prev": undefined,
  "route": {
    "elements": {},
    "loaded": true,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
    "tree": [
      {
        "elements": {
          "_void": {
            "$$typeof": Symbol(react.transitional.element),
            "_owner": null,
            "_store": {},
            "key": null,
            "props": {
              "children": "Void",
            },
            "type": "div",
          },
        },
        "loaded": true,
        "modules": [],
        "path": "/abc",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
        "tree": [
          {
            "elements": {},
            "loaded": true,
            "modules": [],
            "path": "/abc/xyz",
            "test": {
              "keys": [],
              "pattern": /\\^\\\\/abc\\\\/xyz\\(\\?=\\$\\|\\\\/\\)/i,
            },
          },
        ],
      },
    ],
  },
}
`;
